<resources>
    <string name="app_name">DeAuther WebGUI</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="aps_scan">APs Scan/Station Scan</string>
    <string name="attacks_list">Attacks List</string>
    <string name="deauther_settings">DeAuther Settings</string>
    <string name="esp8266_deauther_webgui">ESP8266 DeAuther WebGUI</string>
    <string name="pratimmajumder1_gmail_com">pratimdevonplay@gmail.com</string>
    <string name="help_scan">Till the release (v2.0.5) of SpaceHunn\'s ESP8266 DeAuther, SpaceHunn has not implemented auto-wifiscan feature. So, I\'ve put this feature in this app to check that with your phone\'s hardware and then perform a scan on deauther\'s gui.</string>
    <string name="help_scan_limit">3rd party apps can not scan wifi more than 4 times within a minute period in Android 9+ devices</string>
    <string name="about">About</string>
    <string name="ssids_for_b_p">SSIDs for B/P</string>
    <string name="settings">Settings</string>
    <string name="enable_logcat">Enable Logcat</string>
    <string name="enable_random_coloring_wifi_list">Enable Random Coloring WIFI list</string>
    <string name="location">Location</string>
    <string name="are_you_sure_huh_can_t_see_an_esp">Are you sure? Huh? Can\'t see an esp</string>
</resources>
