<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_apscan"
            android:icon="@drawable/ic_apscan"
            android:title="@string/aps_scan" />
        <item
            android:id="@+id/action_ssid"
            android:icon="@drawable/ic_ssid"
            android:title="@string/ssids_for_b_p" />
        <item
            android:id="@+id/action_attacks"
            android:icon="@drawable/ic_attacks"
            android:title="@string/attacks_list" />
        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/deauther_settings" />

        <item
            android:id="@+id/about"
            android:checkable="false"
            android:icon="@drawable/ic_developers"
            android:title="@string/about" />

    </group>

</menu>
